Fix proggress screen on mobile

--- a/source/styles/components/_progress.scss
+++ b/source/styles/components/_progress.scss
@@ -1,6 +1,21 @@
 .progress {
     color: #fff;
 
+    @media (max-width: $tablet-width) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        .CircularProgressbar {
+            transform: translateY(-30%);
+        }
+    }
+
 
     &-status {
         display: flex;
